[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py39']
extend-exclude = '''
/(
  | build
  | dist
  | \.eggs
  | \.git
  | \.venv
  | install
  | install-lcls1
)/
'''

[tool.ruff]
line-length = 120
target-version = ['py39']
extend-exclude = '''
/(
  | build
  | dist
  | \.eggs
  | \.git
  | \.venv
  | install
  | install-lcls1
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["ami"]
